--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -6,6 +6,10 @@
     <!--  Google Fonts Links  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +22,8 @@
 
     <style>
         body {
-            background-color: lightgray;
+            background-color: rgba(120, 111, 111, 0.75);
+            color: #000000;
         }
 
         .img {
@@ -63,26 +68,63 @@
         #resourcesBody {
             display: grid;
         }
+
+        /* Nav Bar */
+        #listItems {
+            list-style: none;
+            font-family: 'Poiret One', cursive;
+            display: flex;
+            width: 35%;
+            justify-content: space-around;
+            /*background-color: #d0cfcf;*/
+            letter-spacing: 2px;
+            font-size: 18px;
+
+        }
+
+        #navigationBody {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            min-height: 10vh;
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            /*background-color: #7fcffd;*/
+            cursor: pointer;
+        }
+
+        .logo {
+            height: 100px;
+            width: 100px;
+            /*background-color: #ff62fa;*/
+        }
     </style>
 </head>
 <body>
 <div class="container">
     <nav>
-        <a href="home.html">Home</a>
-        <!--    <img src="/static/logo.jpg" alt="logo" height="75px" width="75px">-->
-        <!--    <ul>-->
-        <!--        <li>Home</li>-->
-        <!--        <li>Login</li>-->
-        <!--        <li>Register</li>-->
-        <!--    </ul>-->
+        <div id="navigationBody">
+            <div class="logo">
+                <a href="#">
+                    <img src="https://images.pexels.com/photos/3332510/pexels-photo-3332510.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                         alt="logo" height="100px" width="150px">
+                </a>
+            </div>
+            <ul id="listItems">
+                <li><a href="/home"></a>Home</li>
+                <li><a href="/login"></a>Login</li>
+                <li><a href="/register"></a>Register</li>
+            </ul>
+        </div>
     </nav>
     <div id="resourcesHeader">
         <h1>Resources</h1>
     </div>
     <div id="resourcesBody">
         <img class="img"
-             src="https://images.pexels.com/photos/210600/pexels-photo-210600.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
-             alt="finances">
+             src="https://images.pexels.com/photos/4968393/pexels-photo-4968393.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+             alt="finances" width="600px" height="400px">
         <sub>Savings</sub>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vulputate volutpat vitae cras leo tempus non nisl.
             Dignissim id quis sed posuere arcu. Porttitor mattis tortor neque morbi tellus risus. Aenean turpis neque mi
