Fixed nav bar on register page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -118,6 +118,7 @@
         }
 
         /* Nav Bar */
+
         #listItems {
             list-style: none;
             font-family: 'Poiret One', cursive;
@@ -127,6 +128,7 @@
             /*background-color: #d0cfcf;*/
             letter-spacing: 2px;
             font-size: 18px;
+            cursor: pointer;
 
         }
 
@@ -139,7 +141,7 @@
             margin: 0;
             box-sizing: border-box;
             /*background-color: #7fcffd;*/
-            cursor: pointer;
+
         }
 
         .logo {
@@ -204,8 +206,8 @@
     </div>
     <div class="buttonHome">
         <button id="getStarted"><a href="register.html">Get Started!</a></button>
-        <!--    <a href="register.html">Get Started!</a>-->
     </div>
+    <a href="/register">Not Registered?</a>
 </div>
 </body>
 </html>
