--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,7 +18,7 @@
     <!--Styling-->
     <style>
         body {
-            background-color: whitesmoke;
+            background-color: #e8e8e8;
         }
 
         .container {
@@ -27,6 +27,7 @@
             align-items: center;
             flex-direction: column;
             width: 100%;
+            text-align: center;
         }
 
         #register {
@@ -51,10 +52,12 @@
             background-color: #d0cfcf;
             outline: none;
             border: transparent;
-            padding-bottom: 10px;
+            padding-bottom: 25px;
             text-align: center;
             align-items: center;
             font-family: 'Satisfy', cursive;
+            width: 350px;
+            margin: 30px;
 
 
         }
@@ -67,8 +70,8 @@
         .btn {
             margin-top: 15px;
             font-family: 'Satisfy', cursive;
-            height: 25px;
-            width: 75px;
+            height: 30px;
+            width: 200px;
             background-color: #7fcffd;
             cursor: pointer;
         }
@@ -93,6 +96,7 @@
             padding: 0;
             margin: 0;
             box-sizing: border-box;
+            width: 100vw;
             /*background-color: #7fcffd;*/
         }
 
