--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -141,6 +141,7 @@
             margin: 0;
             box-sizing: border-box;
             /*background-color: #7fcffd;*/
+            width: 100vw;
 
         }
 
@@ -157,7 +158,7 @@
         <div id="navigationBody">
             <div class="logo">
                 <a href="#">
-                    <img src="https://images.pexels.com/photos/3332510/pexels-photo-3332510.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    <img src="https://images.pexels.com/photos/1111371/pexels-photo-1111371.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                          alt="logo" height="100px" width="150px">
                 </a>
             </div>
