--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -22,7 +22,7 @@
 
     <style>
         body {
-            background-color: rgba(120, 111, 111, 0.75);
+            background-color: rgba(187, 182, 182, 0.75);
             color: #000000;
         }
 
@@ -92,6 +92,7 @@
             box-sizing: border-box;
             /*background-color: #7fcffd;*/
             cursor: pointer;
+            width: 100vw;
         }
 
         .logo {
@@ -107,7 +108,7 @@
         <div id="navigationBody">
             <div class="logo">
                 <a href="#">
-                    <img src="https://images.pexels.com/photos/3332510/pexels-photo-3332510.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"
+                    <img src="https://images.pexels.com/photos/1111371/pexels-photo-1111371.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                          alt="logo" height="100px" width="150px">
                 </a>
             </div>
