Styling for Register page basically done '

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,7 +18,7 @@
     <!--Styling-->
     <style>
         body {
-            background-color: #e8e8e8;
+            background-color: #ffffff;
         }
 
         .container {
@@ -113,7 +113,7 @@
         <div id="navigationBody">
             <div class="logo">
                 <a href="#">
-                    <img src="https://images.pexels.com/photos/1111371/pexels-photo-1111371.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="logo" height="100px" width="150px">
+                    <img src="/logo.jpg" alt="logo" height="100px" width="150px">
                 </a>
             </div>
             <ul id="listItems">
