logging in and registering works

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -158,7 +158,7 @@
         <div id="navigationBody">
             <div class="logo">
                 <a href="#">
-                    <img src="https://images.pexels.com/photos/1111371/pexels-photo-1111371.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+                    <img src="/logo.jpg"
                          alt="logo" height="100px" width="150px">
                 </a>
             </div>
@@ -174,7 +174,7 @@
     </div>
     <div id="bulbs">
         <img id="lightBulbs"
-             src="https://images.pexels.com/photos/1036936/pexels-photo-1036936.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
+             src="/lightbulbsBlue.jpg"
              alt="light bulbs" height="400px" width="600px">
     </div>
     <div class="paragraphs">
