--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -125,7 +125,7 @@
     <div id="navigationBody">
         <div class="logo">
             <a href="#">
-                <img src="https://images.pexels.com/photos/1111371/pexels-photo-1111371.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="logo" height="100px" width="150px">
+                <img src="/logo.jpg" alt="logo" height="100px" width="150px">
             </a>
         </div>
         <ul id="listItems">
