--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -45,7 +45,7 @@
   <div id="navigationBody">
     <div class="logo">
       <a href="#">
-        <img src="https://images.pexels.com/photos/3332510/pexels-photo-3332510.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="logo" height="100px" width="150px">
+        <img src="/logo.jpg" alt="logo" height="100px" width="150px">
       </a>
     </div>
     <ul id="listItems">
