--- a/src/main/resources/templates/challenges.html
+++ b/src/main/resources/templates/challenges.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Challenges Main</title>
 </head>
 <body>
-
+<li>
+    <form th:action="@{/logout}" th:method="post">
+        <button class="btn-link btn" style="margin-top: 8px">Logout</button>
+    </form>
+</li>
 </body>
 </html>
