--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -208,7 +208,7 @@
     <div class="buttonHome">
         <button id="getStarted"><a th:href="@{/register}">Get Started!</a></button>
     </div>
-    <a th:href="@{/login}">Not Registered?</a>
+<!--    <a th:href="@{/login}">Not Registered?</a>-->
 </div>
 </body>
 </html>
