--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,17 +61,20 @@
         }
 
         label {
+            display: flex;
+            justify-content: center;
             text-align: center;
         }
 
         #btn {
             display: flex;
+            justify-content: center;
             border-radius: 50px;
-            width: 50px;
-            background-color: #7ef4ff;
+            width: 100px;
+            background-color: #7ee1ff;
             outline: none;
             border: transparent;
-            padding-bottom: 10px;
+            padding-bottom: 15px;
             text-align: center;
             align-items: center;
             margin-top: 5px;
@@ -116,7 +119,7 @@
 
         a {
             text-decoration: none;
-            color: #7fcffd;
+            color: #86d1ff;
         }
     </style>
 </head>
@@ -153,8 +156,9 @@
             <input id="password" name="password" type="password"/><br>
             <input id="btn" type="submit" value="Login"/>
         </form>
+        <a href="/register">Not Registered?</a>
     </div>
-    <a href="/register">Not Registered?</a>
+
 </div>
 </body>
 </html>
