--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -121,13 +121,17 @@
             text-decoration: none;
             color: #86d1ff;
         }
+
+        form {
+            margin-top: 40px;
+        }
     </style>
 </head>
 <body>
 <nav>
     <div id="navigationBody">
         <div class="logo">
-            <a href="#">
+            <a href="/home">
                 <img src="/logo.jpg" alt="logo" height="100px" width="150px">
             </a>
         </div>
