--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -58,6 +58,7 @@
             justify-content: center;
             align-items: center;
             outline: none;
+            text-align: center;
 
         }
 
@@ -66,9 +67,12 @@
             /*justify-content: center;*/
             /*align-content: center;*/
             flex-direction: column;
-            width: 65%;
+            width: 90%;
             font-size: 24px;
             color: #5a5a5a;
+            align-items: center;
+            justify-content: center;
+            margin: 50px;
         }
 
         #getStarted {
@@ -114,6 +118,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            width: 100vw;
             text-align: center;
         }
 
