--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -82,6 +82,11 @@
 
         }
 
+        #listItems a {
+            color: black;
+            text-decoration: none;
+        }
+
         #navigationBody {
             display: flex;
             justify-content: space-around;
@@ -113,9 +118,9 @@
                 </a>
             </div>
             <ul id="listItems">
-                <li><a href="/home"></a>Home</li>
-                <li><a href="/login"></a>Login</li>
-                <li><a href="/register"></a>Register</li>
+                <li><a href="/home">Home</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
             </ul>
         </div>
     </nav>
