--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -93,6 +93,7 @@
             /*background-color: #d0cfcf;*/
             letter-spacing: 2px;
             font-size: 18px;
+            cursor: pointer;
 
         }
 
@@ -109,6 +110,10 @@
             margin: 0;
             box-sizing: border-box;
             /*background-color: #7fcffd;*/
+        }
+        #listItems a {
+            color: black;
+            text-decoration: none;
         }
 
         .logo {
@@ -136,9 +141,9 @@
             </a>
         </div>
         <ul id="listItems">
-            <li><a href="/home"></a>Home</li>
-            <li><a href="/login"></a>Resources</li>
-            <li><a href="/register"></a>Register</li>
+            <li><a th:href="@{/home}">Home</a></li>
+            <li><a th:href="@{/resources}">Resources</a></li>
+            <li><a th:href="@{/register}">Register</a></li>
         </ul>
     </div>
 </nav>
