--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -88,6 +88,11 @@
 
         }
 
+        #listItems a {
+            color: black;
+            text-decoration: none;
+        }
+
         #navigationBody {
             display: flex;
             justify-content: space-around;
@@ -117,9 +122,9 @@
                 </a>
             </div>
             <ul id="listItems">
-                <li><a th:href="@{/home}"></a>Home</li>
-                <li><a th:href="@{/login}"></a>Login</li>
-                <li><a th:href="@{/resources}"></a>Resources</li>
+                <li><a th:href="@{/home}">Home</a></li>
+                <li><a th:href="@{/login}">Login</a></li>
+                <li><a th:href="@{/resources}">Resources</a></li>
             </ul>
         </div>
     </nav>
