Added views for controllers

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -45,6 +45,7 @@
             align-items: center;
             justify-content: center;
             font-family: 'Manjari', sans-serif;
+
         }
 
         form > input {
@@ -71,9 +72,13 @@
             margin-top: 15px;
             font-family: 'Satisfy', cursive;
             height: 30px;
-            width: 200px;
+            width: 175px;
             background-color: #7fcffd;
             cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
         }
 
         #listItems {
@@ -102,6 +107,7 @@
             margin: 0;
             box-sizing: border-box;
             width: 100vw;
+
             /*background-color: #7fcffd;*/
         }
 
