--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -215,7 +215,7 @@
             get started and then pick a challenge to go from there! </p>
     </div>
     <div class="buttonHome">
-        <button id="getStarted"><a th:href="@{/register}">Get Started!</a></button>
+        <button id="getStarted"><a th:href="@{/login}">Get Started!</a></button>
     </div>
 <!--    <a th:href="@{/login}">Not Registered?</a>-->
 </div>
