--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -153,7 +153,7 @@
                 <label for="password">Password</label>
                 <input id="password" th:field="*{password}"/>
 
-                <input class="btn" value="Get Started!" type="submit"/>
+                <input class="btn" value="Create Account!" type="submit"/>
             </form>
         </div>
 
