--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
         }
 
         body {
-            background-color: #fafaff;
+            background-color: #ffffff;
             display: flex;
             justify-content: center;
             align-items: center;
